crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__state__tests__snapshot_contract_with_balances.snap
---
source: crates/chain-config/src/config/state.rs
expression: json
---
{
  "contracts": [
    {
      "contract_id": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "code": "0x24400000",
      "salt": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "balances": [
        [
          "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
          "0xe46d13fb359a76c9"
        ]
      ]
    }
  ]
}
