crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__state__tests__snapshot_contract_with_state.snap
---
source: crates/chain-config/src/config/state.rs
expression: json
---
{
  "contracts": [
    {
      "contract_id": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "code": "0x24400000",
      "salt": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "state": [
        [
          "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
          "0xc9fba417a2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00"
        ]
      ]
    }
  ]
}
