crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__state__tests__snapshot_simple_coin_state.snap
---
source: crates/chain-config/src/config/state.rs
expression: json
---
{
  "coins": [
    {
      "tx_id": "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
      "output_index": "0xc9",
      "tx_pointer_block_height": "0xe46d13fb",
      "tx_pointer_tx_idx": "0xf4a4",
      "maturity": "0x63f8fe17",
      "owner": "0xa2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00a3f57027",
      "amount": "0x0d1865b14bc80dbc",
      "asset_id": "0x0d053242a9719dca480b4f4910fa60671f2068086498c72e30fc8b969e083932"
    }
  ]
}
