crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__state__tests__snapshot_simple_contract.snap
---
source: crates/chain-config/src/config/state.rs
expression: json
---
{
  "contracts": [
    {
      "contract_id": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "code": "0x24400000",
      "salt": "0x0000000000000000000000000000000000000000000000000000000000000000"
    }
  ]
}
