crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__state__tests__snapshot_simple_message_state.snap
---
source: crates/chain-config/src/config/state.rs
expression: json
---
{
  "messages": [
    {
      "sender": "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
      "recipient": "0xc9fba417a2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00",
      "nonce": "0xa3f57027bcb10d053242a9719dca480b4f4910fa60671f2068086498c72e30fc",
      "amount": "0x0e1ef2963832068b",
      "data": "0x9e",
      "da_height": "0x7d54e039b04f3c08"
    }
  ]
}
